I give up on components, doing graphics instead.

--- a/modules/ecs/CMakeLists.txt
+++ b/modules/ecs/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(POMEGRANATE_ECS_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/entity.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/entity.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/component.h
 )
 
 set(POMEGRANATE_ECS_INCLUDE_DIRS
