2D and 3d models stuff

--- a/modules/graphics/glfw/CMakeLists.txt
+++ b/modules/graphics/glfw/CMakeLists.txt
@@ -9,6 +9,10 @@ set(POMEGRANATE_GRAPHICS_GLFW_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/vertex3d.h
         ${CMAKE_CURRENT_SOURCE_DIR}/model3d.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/model3d.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/vertex2d.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/vertex2d.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/model2d.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/model2d.h
         ${CMAKE_CURRENT_SOURCE_DIR}/glad.c
 )
 
