--- a/modules/ecs/CMakeLists.txt
+++ b/modules/ecs/CMakeLists.txt
@@ -3,6 +3,9 @@ set(POMEGRANATE_ECS_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/entity.h
         ${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/component.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/archetype.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/archetype.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/ecs_typedefs.h
 )
 
 set(POMEGRANATE_ECS_INCLUDE_DIRS
