Fixed bug, added groups

--- a/modules/ecs/CMakeLists.txt
+++ b/modules/ecs/CMakeLists.txt
@@ -4,6 +4,8 @@ set(POMEGRANATE_ECS_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/archetype.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/archetype.h
         ${CMAKE_CURRENT_SOURCE_DIR}/ecs_typedefs.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/group.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/group.h
 )
 
 set(POMEGRANATE_ECS_INCLUDE_DIRS
