Graphics fix and math stuff

--- a/modules/math/CMakeLists.txt
+++ b/modules/math/CMakeLists.txt
@@ -11,6 +11,12 @@ set(POMEGRANATE_MATH_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/matrix3x3.h
         ${CMAKE_CURRENT_SOURCE_DIR}/matrix4x4.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/matrix4x4.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/noise1d.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/noise1d.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/noise2d.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/noise2d.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/rect.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/rect.h
 )
 
 set(POMEGRANATE_MATH_INCLUDE_DIRS
