Tilemap and ECS Bugfix maybe?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,27 @@ set(SOURCE_FILES
     ${SOURCE_DIR}/main.cpp
 )
 
+set(OBJECT_SOURCE_FILES
+    ${SOURCE_DIR}/components/tile_map.h
+    ${SOURCE_DIR}/components/tile_map.cpp
+    ${SOURCE_DIR}/components/tile_set.h
+    ${SOURCE_DIR}/components/tile_set.cpp
+    ${SOURCE_DIR}/components/tile.h
+    ${SOURCE_DIR}/components/tile.cpp
+    ${SOURCE_DIR}/components/transform.h
+    ${SOURCE_DIR}/components/transform.cpp
+)
+
+set(SYSTEM_SOURCE_FILES
+    ${SOURCE_DIR}/systems/tile_map.h
+    ${SOURCE_DIR}/systems/tile_map.cpp
+)
+
 # Set include directories
 include_directories(${INCLUDE_DIR})
 
 # Set the executable
-add_executable(PomegranateEngine ${SOURCE_FILES})
+add_executable(PomegranateEngine ${SOURCE_FILES} ${OBJECT_SOURCE_FILES} ${SYSTEM_SOURCE_FILES})
 
 # Link the modules
 target_link_libraries(PomegranateEngine PomegranateCore)
@@ -32,8 +48,6 @@ target_link_libraries(PomegranateEngine PomegranateMath)
 target_link_libraries(PomegranateEngine PomegranateECS)
 target_link_libraries(PomegranateEngine PomegranateGraphicsGLFW)
 target_link_libraries(PomegranateEngine PomegranateEvents)
-
-
 
 # Set the output directory for the build
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
