Tilemap structure rework, embedded icon

--- a/modules/graphics/glfw/CMakeLists.txt
+++ b/modules/graphics/glfw/CMakeLists.txt
@@ -16,6 +16,7 @@ set(POMEGRANATE_GRAPHICS_GLFW_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/texture.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/texture.h
         ${CMAKE_CURRENT_SOURCE_DIR}/glad.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/pomegranate_image.h
 )
 
 set(POMEGRANATE_GRAPHICS_GLFW_INCLUDE_DIRS
