--- a/modules/math/CMakeLists.txt
+++ b/modules/math/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(POMEGRANATE_MATH_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/vector2.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/vector2.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/vector2i.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/vector2i.h
         ${CMAKE_CURRENT_SOURCE_DIR}/vector3.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/vector3.h
         ${CMAKE_CURRENT_SOURCE_DIR}/vector4.cpp
