--- a/modules/events/CMakeLists.txt
+++ b/modules/events/CMakeLists.txt
@@ -5,6 +5,10 @@ set(POMEGRANATE_EVENTS_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/events.h
 )
 
+set(POMEGRANATE_EVENTS_INCLUDE_DIRS
+        ../
+)
+
 add_library(PomegranateEvents ${POMEGRANATE_EVENTS_SOURCES})
 
 target_include_directories(PomegranateEvents PUBLIC ${POMEGRANATE_EVENTS_INCLUDE_DIRS})
