--- a/modules/graphics/glfw/CMakeLists.txt
+++ b/modules/graphics/glfw/CMakeLists.txt
@@ -20,9 +20,13 @@ set(POMEGRANATE_GRAPHICS_GLFW_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/graphics.h
 )
 
+set(POMEGRANATE_GRAPHICS_GLFW_INCLUDE_DIRS
+        ../
+)
+
 add_library(PomegranateGraphicsGLFW ${POMEGRANATE_GRAPHICS_GLFW_SOURCES})
 
-target_include_directories(PomegranateGraphicsGLFW PUBLIC ${POMEGRANATE_GRAPHICS_GLFW_INCLUDE_DIRS})
+target_include_directories(PomegranateGraphicsGLFW PUBLIC ${POMEGRANATE_GRAPHICS_GLFW_INCLUDE_DIRS} ${POMEGRANATE_MATH_INCLUDE_DIRS} ${POMEGRANATE_CORE_INCLUDE_DIRS})
 
 find_package(glfw3 REQUIRED)
 find_package(OpenGL REQUIRED)
