--- a/modules/ecs/CMakeLists.txt
+++ b/modules/ecs/CMakeLists.txt
@@ -7,6 +7,7 @@ set(POMEGRANATE_ECS_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/component.h
         ${CMAKE_CURRENT_SOURCE_DIR}/ecs.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/ecs.cpp
 )
 
 set(POMEGRANATE_ECS_INCLUDE_DIRS
