--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -6,7 +6,7 @@ set(POMEGRANATE_CORE_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/range.h
         ${CMAKE_CURRENT_SOURCE_DIR}/range.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/list.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/list.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/hash_table.h
 )
 
 set(POMEGRANATE_CORE_INCLUDE_DIRS
