ECS stuff, only Entity::destroy remains

--- a/modules/ecs/CMakeLists.txt
+++ b/modules/ecs/CMakeLists.txt
@@ -1,3 +1,5 @@
+option(ENABLE_ECS_EXTENSIONS "Enable ECS extensions" ON)
+
 set(POMEGRANATE_ECS_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/entity.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/entity.h
@@ -8,9 +10,22 @@ set(POMEGRANATE_ECS_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/component.h
         ${CMAKE_CURRENT_SOURCE_DIR}/core.h
         ${CMAKE_CURRENT_SOURCE_DIR}/core.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/group.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/group.h
 )
+
+if(ENABLE_ECS_EXTENSIONS)
+set(POMEGRANATE_ECS_SOURCES ${POMEGRANATE_ECS_SOURCES}
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/transform2d.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/transform2d.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/transform3d.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/transform3d.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/name.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/name.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/color.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/color.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/hierarchy.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/extensions/common/hierarchy.h
+)
+endif ()
 
 set(POMEGRANATE_ECS_INCLUDE_DIRS
         ../
