Dropped OpenGL support, vulkan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/core)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/math)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/graphics/glfw)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/events)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/graphics/vulkan)
 
 set(SOURCE_FILES
     ${SOURCE_DIR}/main.cpp
@@ -30,8 +30,8 @@ add_executable(PomegranateEngine ${SOURCE_FILES})
 target_link_libraries(PomegranateEngine PomegranateCore)
 target_link_libraries(PomegranateEngine PomegranateMath)
 target_link_libraries(PomegranateEngine PomegranateECS)
-target_link_libraries(PomegranateEngine PomegranateGraphicsGLFW)
 target_link_libraries(PomegranateEngine PomegranateEvents)
+target_link_libraries(PomegranateEngine PomegranateVulkan)
 
 # Set the output directory for the build
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
