--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -9,6 +9,8 @@ set(POMEGRANATE_CORE_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/hash_table.h
         ${CMAKE_CURRENT_SOURCE_DIR}/table.h
         ${CMAKE_CURRENT_SOURCE_DIR}/table.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/string.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/string.cpp
 )
 
 set(POMEGRANATE_CORE_INCLUDE_DIRS
