--- a/modules/ecs/CMakeLists.txt
+++ b/modules/ecs/CMakeLists.txt
@@ -33,6 +33,8 @@ set(POMEGRANATE_ECS_INCLUDE_DIRS
 
 add_library(PomegranateECS ${POMEGRANATE_ECS_SOURCES})
 
+find_package(OpenMP)
+
 target_include_directories(PomegranateECS PUBLIC ${POMEGRANATE_ECS_INCLUDE_DIRS})
 
-target_link_libraries(PomegranateECS PomegranateCore)
+target_link_libraries(PomegranateECS PomegranateCore OpenMP::OpenMP_CXX)
