Implemented File class

--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -13,6 +13,8 @@ set(POMEGRANATE_CORE_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/string.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/debug.h
         ${CMAKE_CURRENT_SOURCE_DIR}/debug.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/file.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/file.cpp
 )
 
 set(POMEGRANATE_CORE_INCLUDE_DIRS
