Renamed ECS::each to parallelEach added each

--- a/modules/graphics/vulkan/CMakeLists.txt
+++ b/modules/graphics/vulkan/CMakeLists.txt
@@ -4,6 +4,8 @@ set(POMEGRANATE_GRAPHICS_VULKAN_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/core.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/window.h
         ${CMAKE_CURRENT_SOURCE_DIR}/window.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/shader.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp
 )
 
 set(POMEGRANATE_GRAPHICS_VULKAN_INCLUDE_DIRS
