--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -21,6 +21,8 @@ set(POMEGRANATE_CORE_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/directory.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/reflectable.h
         ${CMAKE_CURRENT_SOURCE_DIR}/reflectable.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/thread_pool.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/thread_pool.cpp
 )
 
 set(POMEGRANATE_CORE_INCLUDE_DIRS
