--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/events)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/graphics/vulkan)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs/extensions/common)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/lua)
 
 set(SOURCE_FILES
     ${SOURCE_DIR}/main.cpp
@@ -37,12 +38,8 @@ target_link_libraries(PomegranateEngine PomegranateECS)
 target_link_libraries(PomegranateEngine PomegranateEvents)
 target_link_libraries(PomegranateEngine PomegranateVulkan)
 target_link_libraries(PomegranateEngine PomegranateECSExtensionsCommon)
+target_link_libraries(PomegranateEngine PomegranateLua)
 
-# You need to put luajit library in external/luajit
-target_link_libraries(PomegranateEngine ${CMAKE_CURRENT_SOURCE_DIR}/external/luajit/src/libluajit.a)
-
-# also add it as an include directory
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external/luajit/src)
 
 # Set the output directory for the build
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
