--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(PomegranateEngine)
 
 add_compile_options( -Wreturn-type)
 add_compile_options( -Wuninitialized)
+add_definitions(-DPOMEGRANATE_GRAPHICS_VULKAN_VALIDATION_LAYERS)
 
 # Enable MVK_CONFIG_USE_METAL_ARGUMENT_BUFFERS
 add_compile_options(-DMVK_CONFIG_USE_METAL_ARGUMENT_BUFFERS=1)
