Updated LuaScript to LuaState and changed API, unfinished

--- a/modules/lua/CMakeLists.txt
+++ b/modules/lua/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(POMEGRANATE_LUA_SOURCES
-        ${CMAKE_CURRENT_SOURCE_DIR}/lua_script.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/lua_script.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/lua_state.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/lua_state.h
         ${CMAKE_CURRENT_SOURCE_DIR}/debug.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/debug.h
         ${CMAKE_CURRENT_SOURCE_DIR}/events.cpp
