--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/math)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/math/geometry)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/events)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/graphics/vulkan)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/graphics/opengl)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs/extensions/common)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/lua)
 
@@ -41,7 +41,7 @@ target_link_libraries(PomegranateEngine PomegranateMath)
 target_link_libraries(PomegranateEngine PomegranateMathGeometry)
 target_link_libraries(PomegranateEngine PomegranateECS)
 target_link_libraries(PomegranateEngine PomegranateEvents)
-target_link_libraries(PomegranateEngine PomegranateVulkan)
+target_link_libraries(PomegranateEngine PomegranateGL)
 target_link_libraries(PomegranateEngine PomegranateECSExtensionsCommon)
 target_link_libraries(PomegranateEngine PomegranateLua)
 
