Added Portaudio includes

--- a/modules/audio/CMakeLists.txt
+++ b/modules/audio/CMakeLists.txt
@@ -11,6 +11,7 @@ set(POMEGRANATE_AUDIO_SOURCES
 
 set(POMEGRANATE_AUDIO_INCLUDE_DIRS
         ../
+        ${CMAKE_CURRENT_SOURCE_DIR}/external/
 )
 
 add_library(PomegranateAudio ${POMEGRANATE_AUDIO_SOURCES})
@@ -18,7 +19,8 @@ add_library(PomegranateAudio ${POMEGRANATE_AUDIO_SOURCES})
 target_include_directories(PomegranateAudio PUBLIC ${POMEGRANATE_AUDIO_INCLUDE_DIRS} ${POMEGRANATE_MATH_INCLUDE_DIRS} ${POMEGRANATE_CORE_INCLUDE_DIRS})
 
 # we will be using port audio because it is cross platform, bare bones and easy to use
-set(PORTAUDIO_INCLUDE_DIRS "/usr/include")
-set(PORTAUDIO_LIBRARIES "/usr/lib/x86_64-linux-gnu/libportaudio.so") # Adjust if needed
+if (APPLE)
+    set(PORTAUDIO_LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/external/portaudio/libportaudio.dylib) # Adjust if needed
+endif (APPLE)
 
 target_link_libraries(PomegranateAudio ${PORTAUDIO_LIBRARIES} PomegranateMath PomegranateCore)
