--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/graphics/opengl)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs/extensions/common)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/lua)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/audio)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/input)
 
 set(SOURCE_FILES
     ${SOURCE_DIR}/main.cpp
@@ -46,6 +47,7 @@ target_link_libraries(PomegranateEngine PomegranateGL)
 target_link_libraries(PomegranateEngine PomegranateECSExtensionsCommon)
 target_link_libraries(PomegranateEngine PomegranateLua)
 target_link_libraries(PomegranateEngine PomegranateAudio)
+target_link_libraries(PomegranateEngine PomegranateInput)
 
 
 # Set the output directory for the build
