ECS rendering extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/events)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/graphics/opengl)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs/extensions/common)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/ecs/extensions/rendering)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/lua)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/audio)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/modules/input)
@@ -43,11 +44,12 @@ target_link_libraries(PomegranateEngine PomegranateMath)
 target_link_libraries(PomegranateEngine PomegranateMathGeometry)
 target_link_libraries(PomegranateEngine PomegranateECS)
 target_link_libraries(PomegranateEngine PomegranateEvents)
-target_link_libraries(PomegranateEngine PomegranateGL)
-target_link_libraries(PomegranateEngine PomegranateECSExtensionsCommon)
+target_link_libraries(PomegranateEngine PomegranateGraphics)
 target_link_libraries(PomegranateEngine PomegranateLua)
 target_link_libraries(PomegranateEngine PomegranateAudio)
 target_link_libraries(PomegranateEngine PomegranateInput)
+target_link_libraries(PomegranateEngine PomegranateECSExtensionsCommon)
+target_link_libraries(PomegranateEngine PomegranateECSExtensionsRendering)
 
 
 # Set the output directory for the build
