Various updates, Input Events, ECS rendering

--- a/modules/ecs/extensions/rendering/CMakeLists.txt
+++ b/modules/ecs/extensions/rendering/CMakeLists.txt
@@ -1,9 +1,7 @@
 set(POMEGRANATE_ECS_EXTENSIONS_RENDERING_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/rendering.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/mesh.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/mesh.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/material.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/material.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/mesh_instance.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/mesh_instance.h
         ${CMAKE_CURRENT_SOURCE_DIR}/camera3d.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/camera3d.h
 )
